--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3"
+    
+    "react-router-dom": "^6.22.3",
+    "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
